# SEM5_POIT

./: README.md
lab1+/: CMakeLists.txt  cmd.txt
lab1+/lab1/src/: translate_array.c  translate_pointer.c
lab1+/lab1/tests/: test_translate.c
БД/1+/: MyStart.sql
БД/10+/: lab10.sql
БД/11+/: lab11.sql
БД/12+/: lab12.sql
БД/13+/: lab13.sql
БД/14+/: lab14.sql
БД/2+/: lab2.sql
БД/3+/: task01-03.sql  task04-dbca.txt  task06.sql  task07.sql  task08.sql  task09-12.sql
БД/4+/: lab4.sql
БД/5+/: lab5.sql
БД/6+/: lab6.sql
БД/7+/: lab7.sql
БД/8+/: lab8.sql  tables.sql
БД/9+/: lab9.sql
КМС/1+/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  lab1.sln
КМС/1+/ProjectSettings/: ProjectSettings.asset
КМС/1+/UserSettings/: EditorUserSettings.asset  Search.settings
ОС/1+/: lab1.docx  z03-01.bat  z03-02.bat  z03-03.bat
ОС/2+/: lab2.docx
ОС/3+/: cmd.txt  lab3.docx
ОС/3+/OS-03-01/: OS-03-01.sln
ОС/3+/OS-03-02/: OS-03-02.sln
ОС/3+/OS-03-03/: OS-03-03.sln
ОС/3+/OS-03-04/: CMakeLists.txt
ОС/3+/OS-03-05/: CMakeLists.txt
ОС/3+/OS-03-06/: CMakeLists.txt
ОС/3+/OS-03-06/OS-03-06/: CMakeLists.txt  OS-03-06-1.c  OS-03-06.c
ОС/3+/OS-03-07/: CMakeLists.txt
ОС/4+/: lab4.docx
ОС/4+/OS04-01/: OS04-01.sln
ОС/4+/OS04-02/: OS04-02.sln
ОС/4+/OS04-03/: OS04-03.sln
ОС/4+/OS04-04/: OS04-04.sln
ОС/4+/OS04-04-WinAPI/: OS04-04-WinAPI.sln
ОС/4+/OS04-05/: OS04-05.sln
ОС/4+/OS04-06/: OS04-06.sln
ОС/4+/OS04-07/: OS04-07.sln
ОС/4+/OS04-08/: OS04-08.sln
ОС/4+/OS04-09/: OS04-09.sln
ОС/4+/OS04-10/: OS04-10.sln
ОС/4+/OS04-11/: CMakeLists.txt
ОС/5+/: lab5.docx
ОС/6+/: lab6.docx
ОС/7+/: lab7.docx
ОС/8+/: lab8.docx
ОС/9+/: lab9.docx
ПСКП/lab10+/: 10-01s.js  10-02c.js  10-03c.js  10-03s.js  index.html
ПСКП/lab4+/: 04-01.js  04-02.js  db.js  package.json
ПСКП/lab5+/: 05-01.js  db.js  index.html  package.json
ПСКП/lab6+/: 06-01.txt
ПСКП/lab7+/: m07-01.js  server.js
ПСКП/lab8+/: 08-00.js  controller.js  form.html  package-lock.json  package.json  upload.html
ПСКП/lab9+/: 09-01c.js  09-01s.js  09-02c.js  09-02s.js  09-03c.js  09-03s.js  09-04c.js  09-04s.js  09-05c.js  09-05s.js  09-06c.js  09-06s.js  09-07c.js  09-07s.js  09-08c.js  09-08s.js  MyFile.txt  package-lock.json  package.json
ПСП/1+/: lab1.docx
ПСП/4+/: ClientB.cpp  ClientU.cpp  ServerB.cpp  ServerU.cpp
ПСП/4+/lab4/: CMakeLists.txt  ErrorMsgText.h  clientB.cpp  clientU.cpp  serverB.cpp  serverU.cpp
ПСП/5+/: CMakeLists.txt  Скриншоты.odt
ПСП/6+/: CMakeLists.txt
ПСП/7+/: CMakeLists.txt
ПСП/8-10+/: CMakeLists.txt
СП/lab1+/lab1/: CMakeLists.txt
СП/lab1+/lab1/include/: translate.h
СП/lab1+/lab1/src/: main.c
СП/lab2+/: cmd.txt
СП/lab2+/lab2/: CMakeLists.txt
СП/lab2+/lab2/lab-02a/: CMakeLists.txt  lab-02a.c
СП/lab2+/lab2/lab-02b/: CMakeLists.txt  lab-02b.c
СП/lab2+/lab2/lab-02c/: CMakeLists.txt  lab-02c.c
СП/lab2+/lab2/lab-02d/: CMakeLists.txt  lab-02d.c
СП/lab2+/lab2/lab-02hw/: CMakeLists.txt  lab-02hw.c
СП/lab2+/lab2/lab-02inf/: CMakeLists.txt  lab-02inf.c
СП/lab2+/lab2/lab-02x/: CMakeLists.txt  lab-02x.c
СП/lab2+/lab2/lab-02x-mod/: CMakeLists.txt  lab-02x-mod.c
СП/lab5+/: lab5.docx
СП/lab6+/: lab6.docx
СП/lab7+/: lab7.docx
СП/lab8+/Linux/lab-08c/: CMakeLists.txt  lab-08c.c  mapping-s.c  mapping-s.h
СП/lab8+/Linux/lab-08d/: CMakeLists.txt  lab-08d.c  mapping-d.c
СП/lab8+/Windows/lab-08a/: CMakeLists.txt  lab-08a.c  mapping-s.c  mapping-s.h  mapping-s.lib
СП/lab8+/Windows/lab-08b/: CMakeLists.txt  lab-08b.c  mapping-d.c  mapping-d.def  mapping-d2.c
СП/lab9+/Linux/service-09d/: CMakeLists.txt  service-09d.c  service-09d.conf
СП/lab9+/Windows/service-09/: CMakeLists.txt  service-09.c
СП/lab9+/Windows/service-ctl/: CMakeLists.txt  service-ctl.c
ТПО/: selenium.txt
ТПО/1+/: FuncSpec_Android_Kozeka_Elizaveta.docx
ТПО/10+/: cmd.txt  cookies.json  lab10.py  report.html
ТПО/11+/: issue_page.py  lab11.py  login_page.py  repo_page.py
ТПО/2+/: check-list.xlsx
ТПО/3+/: lab3.docx
ТПО/4+/: lab4.xlsx  test-results.txt
ТПО/5+/: lab5.docx  test-case.xlsx
ТПО/6+/: bug-report.xlsx
ТПО/7+/: first_script.py  lab7.py
ТПО/8+/: lab8.py
ТПО/9+/: cmd.txt  login.py  repository.py  tests.py
ТПвИ (ТРВП)/1+/: task3.html
ТПвИ (ТРВП)/2+/: package-lock.json  package.json
ТПвИ (ТРВП)/3+/: package-lock.json  package.json  postman.txt  web3a.js
ТПвИ (ТРВП)/4+/: package-lock.json  package.json  web4a.js
ТПвИ (ТРВП)/5+/: lab5.js  package-lock.json  package.json
ТПвИ (ТРВП)/6+/: lab6.js  package-lock.json  package.json
Экзы/БД/: create_tables.sql  exam_tasks.sql  Список_примерных_задач_ИСИТ_2024.docx
Экзы/ОС/: os.docx  os_exam.docx
Экзы/ПСП/: Ekzamenatsionnye_voprosy_PSP_2023.docx  PSP_exam_2023.docx  ПСП_нормас2.docx  экз шиман теория.docx
Экзы/СП/: sp_exam.docx  Вопросы для 3 пункта билета.docx  Экзаменационные_вопросы_с_отступами_1.docx
Экзы/ТПО/: Вопросы к экзамену ТПО.docx
(+682 files in other folders)
