cmake_minimum_required (VERSION 3.8)
project ("lab2" C)
add_subdirectory ("lab-02x")
add_subdirectory ("lab-02a")
add_subdirectory ("lab-02x-mod")
add_subdirectory ("lab-02b")
add_subdirectory ("lab-02hw")
add_subdirectory ("lab-02c")
add_subdirectory ("lab-02inf")
add_subdirectory ("lab-02d")